--- a/templates/login.html
+++ b/templates/login.html
@@ -164,7 +164,7 @@
         </form>
         
         <div class="login-footer">
-            <p>Não tem conta? <a href="{{ url_for('register') }}">Cadastre-se</a></p>
+            <p>Sistema de Gestão de Eventos Circenses</p>
         </div>
     </div>
     
